--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.24.0",
     "cra-bundle-analyzer": "^0.1.0",
     "polished": "^4.1.3",
     "react": "^17.0.2",
